--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="" class="float-right"><i class="fa fa-tv text-blue"></i><u>Meeting Link</u></a>
 
                 <!--Button trigger modal for new activity-->
-                <button type="button" class="mt-2 btn btn-primary btn-sm" data-toggle="modal " data-target="#newactivitymodal ">NEW ACTIVITY</button>
+                <button type="button" class="mt-2 btn btn-primary btn-sm" data-toggle="modal" data-target="#newactivitymodal">NEW ACTIVITY</button>
 
                 <!--Reporting and Planning Section-->
                 <section class="reporting-planning my-4">
@@ -192,26 +192,26 @@
                 </section>
 
                 <!--Modal for New Activity-->
-                <div class="modal fade " id="newactivitymodal " tabindex="-1 " role="dialog " aria-labelledby="newactivitymodallabel ">
-                    <div class="modal-dialog " role="document ">
-                        <div class="modal-content ">
-                            <div class="modal-header ">
-                                <button type="button " class="close " data-dismiss="modal " aria-label="Close "><span aria-hidden="true ">&times;</span></button>
-                                <h3 class="modal-title ">New Activity</h3>
+                <div class="modal fade" id="newactivitymodal" tabindex="-1" role="dialog" aria-labelledby="newactivitymodallabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h3 class="modal-title">New Activity</h3>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                             </div>
-                            <div class="modal-body ">
-                                <div class="row ">
-                                    <div class="col-md-12 ">
-                                        <label for="activity-name ">Activity</label>
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <label for="activity-name">Activity</label>
                                         <div class="input-group col-md-12 ">
-                                            <input type="text " class="form-control " id="activity-name " placeholder="Enter Activity... " aria-placeholder="Enter Activity... ">
+                                            <input type="text" class="form-control" id="activity-name" placeholder="Enter Activity..." aria-placeholder="Enter Activity...">
                                         </div>
                                     </div>
 
-                                    <div class="col-md-12 ">
-                                        <label for="project-name ">Project</label>
-                                        <div class="input-group col-md-12 ">
-                                            <select class="form-control select2-project-name " id="project-name ">
+                                    <div class="col-md-12">
+                                        <label for="project-name">Project</label>
+                                        <div class="input-group col-md-12">
+                                            <select class="form-control select2-project-name" id="project-name">
 												<option></option>
 												<option>Activity Reporting and Plan Sharing</option>
 												<option>Fitness Tracker</option>
@@ -220,17 +220,17 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-12 ">
-                                        <label for="date-range ">Date Range</label>
-                                        <div class="input-group col-md-12 " id="date-range ">
-                                            <input type="text " id="date-range-datepicker " placeholder="Choose Date Range " class="form-control col-md-12 " />
+                                    <div class="col-md-12">
+                                        <label for="date-range">Date Range</label>
+                                        <div class="input-group col-md-12" id="date-range">
+                                            <input type="text" id="date-range-datepicker" placeholder="Choose Date Range" class="form-control col-md-12" />
                                         </div>
                                     </div>
 
-                                    <div class="col-md-12 ">
-                                        <label for="priority-level ">Priority</label>
-                                        <div class="input-group col-md-12 ">
-                                            <select class="form-control " id="priority-level ">
+                                    <div class="col-md-12">
+                                        <label for="priority-level">Priority</label>
+                                        <div class="input-group col-md-12">
+                                            <select class="form-control" id="priority-level">
 												<option value=" " disabled selected hidden>Choose Priority</option>
 												<option value='1'> P1</option>
 												<option> P2</option>
@@ -239,18 +239,18 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-12 ">
+                                    <div class="col-md-12">
                                         <label for="percentage ">Percentage</label>
-                                        <div class="input-group col-md-12 ">
-                                            <span class="input-percentage "><input type="number " min="0 " max="100 " id="percentage " placeholder="Enter ...% " aria-placeholder="Enter ...% "></span>
+                                        <div class="input-group col-md-12">
+                                            <span class="input-percentage "><input type="number" min="0" max="100" id="percentage " placeholder="Enter ...%" aria-placeholder="Enter ...%"></span>
                                         </div>
                                     </div>
                                 </div>
 
                             </div>
-                            <div class="modal-footer ">
-                                <button type="button " class="btn btn-gray " data-dismiss="modal ">CANCEL</button>
-                                <button type="button " class="btn btn-primary ">SUBMIT</button>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-gray" data-dismiss="modal">CANCEL</button>
+                                <button type="button" class="btn btn-primary">SUBMIT</button>
                             </div>
                         </div>
                     </div>
