- Choosing project is only Admin

--- a/admin.html
+++ b/admin.html
@@ -112,8 +112,9 @@
                                     <div class="col-md-12">
                                         <label for="project-name">Project</label>
                                         <div class="input-group col-md-12">
-                                            <select class="form-control select2-project-name" id="project-name">
-												<option></option>
+                                            <select class="form-control select2-project-name" id="project-name" disabled aria-disabled="">
+                                                <option></option>
+                                                <option selected>Admin</option>
 												<option>Activity Reporting and Plan Sharing</option>
 												<option>Fitness Tracker</option>
 												<option>1D Pointing Task</option>
