Add reflection dashboard blog

--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
                     <span class="p-2 mt-1"><small>Next week</small></span>
                 </div>
 
+                <!--Reflection section-->
+                <section class="home-reflection-section mb-3 border-bottom">
+                    <div class="d-flex justify-content-center text-yellow">
+                        <i class="fas fa-star mx-1"></i>
+                        <i class="fas fa-star mx-1"></i>
+                        <i class="fas fa-star mx-1"></i>
+                        <i class="fas fa-star mx-1"></i>
+                    </div>
+                    <div class="mb-3">
+                        <b>This Week Reflection</b>
+                        <p class="reflection-text">I finished big things his week!</p>
+                    </div>
+                </section>
+
                 <!--MEETING LINK!-->
                 <a href="" class="float-right"><i class="fa fa-tv text-blue"></i><u>Meeting Link</u></a>
 
