Add bootstrap suggest for mention

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
+    <!--Bootstrap suggest-->
+    <link rel="stylesheet" href="css/bootstrap-suggest.css" />
+
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -197,7 +200,7 @@
                             <img src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="Fitra Rahmamuliani Avatar" class="mr-3 rounded-circle comment-photo" />
                             <div class="media-body align-self-center">
                                 <form class="d-flex flex-row mb-0">
-                                    <input type="text" class="form-control flex-grow-1" placeholder="Write a comment..." />
+                                    <input type="text" class="form-control flex-grow-1 input-comment" placeholder="Write a comment..." />
                                     <button type="submit" class="btn btn-primary ml-2">SUBMIT</button>
                                 </form>
                             </div>
@@ -282,6 +285,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment-with-locales.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/eonasdan-bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js "></script>
+    <script src="js/bootstrap-suggest.js"></script>
     <script src="js/script.js "></script>
 
 </body>
