--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/eonasdan-bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" />
 
     <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/brands.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
 
     <!--Bootstrap suggest-->
     <link rel="stylesheet" href="css/bootstrap-suggest.css" />
@@ -46,11 +48,48 @@
                 </nav>
             </div>
         </header>
-        <div class="row px-5">
-            <div class="col-md-3 border-right">
-
+        <div class="row">
+            <!--Left Navigation bar-->
+            <div class="col-md-3 shadow-sm left-nav-bar-blog px-4">
+                <div class="d-flex justify-content-center pt-5 left-photo-containter">
+                    <img class="rounded-circle left-nav-photo" src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="Profile photo of Fitra Rahmamuliani" />
+                    <small class="align-self-endlevel bg-blue text-white text-center px-4 py-1" id="user-level-1">1</small>
+                </div>
+                <h5 class="text-center mt-3">Fitra Rahmamuliani</h5>
+                <div class="level mt-3">
+                    <div class="d-flex flex-row">
+                        <small>Level 1</small>
+                        <small class="ml-auto">7/10 exp</small>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 70%" aria-valuenow="7" aria-valuemin="0" aria-valuemax="10"></div>
+                    </div>
+                </div>
+                <div class="mt-5 nav flex-column nav-pills nav-left-blog">
+                    <a class="nav-link active" href="./index.html" aria-selected="true">Weekly Report</a>
+                    <a class="nav-link" href="./admin.html" aria-selected="false">Admin</a>
+                    <div class="d-flex">
+                        <a class="nav-link" href="#sub-project-list">Projects</a>
+                        <button type="button" class="ml-auto btn btn-primary btn-sm align-self-center py-2" data-toggle="modal" data-target="#addProjectModal">+ ADD PROJECT</button>
+                    </div>
+                    <a class="nav-link" href="./Reporting/index.html" aria-selected="false">Leaderboard</a>
+                    <h5 class="nav-link">Contact</h5>
+                    <div class="d-flex flex-row phone-row mb-3 ml-3">
+                        <div class="bg-blue rounded-circle mr-2"><i class="fa fa-phone text-white text-center p-2"></i></div>
+                        <a href="tel:+81123456789" class="align-self-center">+81 12 345 6789</a>
+                    </div>
+                    <div class="d-flex flex-row phone-row mb-3 ml-3">
+                        <div class="bg-blue rounded-circle mr-2"><i class="fa fa-at text-white text-center p-2"></i></div>
+                        <a href="mailto:fitrakun@gmail.com" class="align-self-center">fitrakun@gmail.com</a>
+                    </div>
+                    <div class="d-flex flex-row social-media-row ml-3 mt-2">
+                        <a class="bg-green rounded-circle mr-2" href=""><i class="fab fa-line text-white text-center p-2"></i></a>
+                        <a class="bg-green rounded-circle mr-2" href=""><i class="fab fa-weixin text-white text-center p-2"></i></a>
+                        <a class="bg-blue rounded-circle mr-2" href=""><i class="fab fa-skype text-white text-center p-2"></i></a>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-9 pt-4 pl-3 mb-5">
+            <div class="col-md-9 pt-4 px-4 mb-5">
 
                 <!--Top title with date and prev and next week-->
                 <div class="d-flex flex-row justify-content-center align-content-center">
@@ -66,7 +105,7 @@
                 </div>
 
                 <!--Reflection section-->
-                <section class="home-reflection-section mb-3 border-bottom">
+                <section class="home-reflection-section mb-3 shadow-sm py-1 px-3">
                     <div class="d-flex justify-content-center text-yellow">
                         <i class="fas fa-star mx-1"></i>
                         <i class="fas fa-star mx-1"></i>
@@ -75,7 +114,7 @@
                     </div>
                     <div class="mb-3">
                         <b>This Week Reflection</b>
-                        <p class="reflection-text">I finished big things his week!</p>
+                        <p class="reflection-text">I finished big things this week!</p>
                     </div>
                 </section>
 
@@ -272,6 +311,35 @@
                         </div>
                     </div>
                 </div>
+
+                <!--Modal for Add Project-->
+                <div class="modal fade" id="addProjectModal" tabindex="-1" role="dialog" aria-labelledby="addProjectModal" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="addProjectModal">Add Project</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <label for="project-name">Project Name</label>
+                                    <input type="text" id="project-name" class="form-control" placeholder="Project Name..." />
+                                    <label class="mt-3" for="select-project-member">Members</label>
+                                    <div class="w-100">
+                                        <select class="w-100 js-states form-control" id="select-project-member" multiple="multiple"></select>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-gray" data-dismiss="modal">CANCEL</button>
+                                <button type="button" class="btn btn-sm btn-primary">+ADD PROJECT</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
@@ -285,6 +353,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment-with-locales.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/eonasdan-bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/brands.min.js"></script>
     <script src="js/bootstrap-suggest.js"></script>
     <script src="js/script.js "></script>
 
