Fix file source

--- a/Reporting/index.html
+++ b/Reporting/index.html
@@ -12,15 +12,15 @@
     <meta property="og:description" content="test">
     <meta property="og:url" content="https://www.test.com/">
     <meta property="og:site_name" content="CHEC test">
-    <meta property="og:image" content="/shared/img/">
+    <meta property="og:image" content="./shared/img/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="/shared/css/bootstrap.min.css" media="all" charset="utf-8">
+    <link rel="stylesheet" href="./shared/css/bootstrap.min.css" media="all" charset="utf-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/shared/js/slick.min.js"></script>
+    <script type="text/javascript" src="./shared/js/slick.min.js"></script>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <img src="/shared/img/avatar.png" class="w-50 mx-auto d-block" style="margin-top:30px">
+                    <img src="./shared/img/avatar.png" class="w-50 mx-auto d-block" style="margin-top:30px">
                     <h5 class="text-center" style="margin-top:20px">Fitra Rahmamuliani</h5>
                     <nav>
                         <ul class="list-group list-group-flush" style="margin-top:30px; padding-bottom: 30px;">
