--- a/admin.html
+++ b/admin.html
@@ -63,11 +63,18 @@
                     </div>
                 </div>
                 <div class="mt-5 nav flex-column nav-pills nav-left-blog">
-                    <a class="nav-link active" href="./index.html" aria-selected="true">Weekly Report</a>
-                    <a class="nav-link" href="./admin.html" aria-selected="false">Admin</a>
+                    <a class="nav-link" href="./index.html" aria-selected="false">Weekly Report</a>
+                    <a class="nav-link active" href="./admin.html" aria-selected="true">Admin</a>
                     <div class="d-flex">
                         <a class="nav-link" href="#sub-project-list">Projects</a>
                         <button type="button" class="ml-auto btn btn-primary btn-sm align-self-center py-2" data-toggle="modal" data-target="#addProjectModal">+ ADD PROJECT</button>
+                    </div>
+                    <div class="collapse show" id="sub-project-list">
+                        <div class="nav flex-column nav-pills">
+                            <a class="nav-link" href="#">Planning and Reporting</a>
+                            <a class="nav-link" href="#">Fitness Tracker</a>
+                            <a class="nav-link" href="#">1D Pointing App</a>
+                        </div>
                     </div>
                     <a class="nav-link" href="./Reporting/index.html" aria-selected="false">Leaderboard</a>
                     <h5 class="nav-link">Contact</h5>
