--- a/index.html
+++ b/index.html
@@ -69,8 +69,15 @@
                     <a class="nav-link active" href="./index.html" aria-selected="true">Weekly Report</a>
                     <a class="nav-link" href="./admin.html" aria-selected="false">Admin</a>
                     <div class="d-flex">
-                        <a class="nav-link" href="#sub-project-list">Projects</a>
+                        <a class="nav-link" href="#sub-project-list" data-toggle="collapse">Projects</a>
                         <button type="button" class="ml-auto btn btn-primary btn-sm align-self-center py-2" data-toggle="modal" data-target="#addProjectModal">+ ADD PROJECT</button>
+                    </div>
+                    <div class="collapse show" id="sub-project-list">
+                        <div class="nav flex-column nav-pills">
+                            <a class="nav-link" href="#">Planning and Reporting</a>
+                            <a class="nav-link" href="#">Fitness Tracker</a>
+                            <a class="nav-link" href="#">1D Pointing App</a>
+                        </div>
                     </div>
                     <a class="nav-link" href="./Reporting/index.html" aria-selected="false">Leaderboard</a>
                     <h5 class="nav-link">Contact</h5>
@@ -106,7 +113,7 @@
 
                 <!--Reflection section-->
                 <section class="home-reflection-section mb-3 shadow-sm py-1 px-3">
-                    <div class="d-flex justify-content-center text-yellow">
+                    <div class="d-flex pt-2 justify-content-center text-yellow">
                         <i class="fas fa-star mx-1"></i>
                         <i class="fas fa-star mx-1"></i>
                         <i class="fas fa-star mx-1"></i>
