--- a/admin.html
+++ b/admin.html
@@ -42,7 +42,72 @@
 
                     <a class="p-2 text-dark" href="/language?lang=ja_JP">日本語</a>
 
+                    <a tabindex="0" class="p-2 text-primary notification-icon"><i class="text-lg-center fa fa-bell"></i></a>
+
                 </nav>
+            </div>
+
+            <div class="notification-container" style="overflow: auto; display: none;">
+                <div class="pt-2">
+                    <div class="d-flex flex-row mb-4">
+                        <img class="rounded-circle mr-2" src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" />
+                        <div class="notification-content mr-3">
+                            <b class="writers-name">Zhihang Guo</b>
+                            <p class="mb-1">commented: “Can you tell me the title of the paper that you read?</p>
+                            <small class="text-muted">1 day ago</small>
+                        </div>
+                        <div class="unread rounded-circle align-self-center text-primary">&#8226;</div>
+                    </div>
+                    <div class="d-flex flex-row mb-4">
+                        <img class="rounded-circle mr-2" src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" />
+                        <div class="notification-content mr-3">
+                            <b class="writers-name">Zhihang Guo</b>
+                            <p class="mb-1">commented: “Can you tell me the title of the paper that you read?</p>
+                            <small class="text-muted">1 day ago</small>
+                        </div>
+                        <div class="unread rounded-circle align-self-center text-primary">&#8226;</div>
+                    </div>
+                    <div class="d-flex flex-row mb-4">
+                        <img class="rounded-circle mr-2" src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" />
+                        <div class="notification-content mr-3">
+                            <b class="writers-name">Zhihang Guo</b>
+                            <p class="mb-1">commented: “Can you tell me the title of the paper that you read?</p>
+                            <small class="text-muted">1 day ago</small>
+                        </div>
+                        <div class="unread rounded-circle align-self-center text-primary">&#8226;</div>
+                    </div>
+
+                    <div class="d-flex flex-row mb-4">
+                        <img class="rounded-circle mr-2" src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" />
+                        <div class="notification-content mr-3">
+                            <b class="writers-name">Zhihang Guo</b>
+                            <p class="mb-1">commented: “Can you tell me the title of the paper that you read?</p>
+                            <small class="text-muted">1 day ago</small>
+                        </div>
+                        <div class="unread rounded-circle align-self-center text-primary">&#8226;</div>
+                    </div>
+
+                    <div class="d-flex flex-row mb-4">
+                        <img class="rounded-circle mr-2" src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" />
+                        <div class="notification-content mr-3">
+                            <b class="writers-name">Zhihang Guo</b>
+                            <p class="mb-1">commented: “Can you tell me the title of the paper that you read?</p>
+                            <small class="text-muted">1 day ago</small>
+                        </div>
+                        <div class="unread rounded-circle align-self-center text-primary">&#8226;</div>
+                    </div>
+
+                    <div class="d-flex flex-row mb-4">
+                        <img class="rounded-circle mr-2" src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" />
+                        <div class="notification-content mr-3">
+                            <b class="writers-name">Zhihang Guo</b>
+                            <p class="mb-1">commented: “Can you tell me the title of the paper that you read?</p>
+                            <small class="text-muted">1 day ago</small>
+                        </div>
+                        <div class="unread rounded-circle align-self-center text-primary">&#8226;</div>
+                    </div>
+
+                </div>
             </div>
         </header>
         <div class="row">
@@ -245,6 +310,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment-with-locales.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/brands.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/eonasdan-bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js "></script>
+    <script src="js/bootstrap-suggest.js"></script>
     <script src="js/script.js "></script>
 
 </body>
