Add report view table and view card

--- a/report.html
+++ b/report.html
@@ -199,7 +199,96 @@
                         </div>
                         <div class="card-body">
                             <a href="#">Show previous reports</a>
-                            <div class="d-flex flex-column my-2">
+                            <form class="d-flex flex-rows mt-3">
+                                <div class="dropdown">
+                                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                      Sort
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        <h6 class="dropdown-header">Sort by</h6>
+                                        <a class="dropdown-item sort-report-title" href="#" data-id="1">Activity Title</a>
+                                        <a class="dropdown-item sort-report-date" href="#" data-id="1">Date</a>
+                                        <a class="dropdown-item sort-report-priority" href="#" data-id="1">Priority</a>
+                                        <a class="dropdown-item sort-report-progress" href="#" data-id="1">Progress</a>
+                                    </div>
+                                </div>
+                                <input class="form-control ml-3 mr-sm-2 search-activity-title" type="search" placeholder="Search Activity..." aria-label="Search" data-id="1">
+                            </form>
+
+                            <table class="table mt-3 report-table" data-id="1">
+                                <tbody>
+                                    <tr class="row">
+                                        <td class="col-6 ml-auto">Design our blog based on the design implicationDesign our blog based on the design implicationDesign our blog based on the design implicationDesign our blog based on the design implicationDesign our blog based on
+                                            the design implicationDesign our blog based on the design implication</td>
+                                        <td class="col-3 text-wrap"> June 01 - June 07</td>
+                                        <td class="col-2 flex-10 priority"><i class="fa fa-flag text-center pr-1 text-orange"></i> P2 </td>
+                                        <td class="col-2 flex-12 text-white text-center bg-green mr-auto report-progress" data-progress="100">DONE</td>
+                                    </tr>
+                                    <tr class="row">
+                                        <td class="col-6 ml-auto">Ask all members feedback (until Tuesday, June 09)</td>
+                                        <td class="col-3 text-wrap"> June 08 - June 14</td>
+                                        <td class="col-2 flex-10 priority"><i class="fa fa-flag text-center pr-1 text-red"></i> P1 </td>
+                                        <td class="col-2 flex-12 text-center bg-yellow mr-auto report-progress" data-progress="50">50%</td>
+                                    </tr>
+                                    <tr class="row">
+                                        <td class="col-6 ml-auto">Discuss with <a href="">@Wang Chen</a> about the implementation</td>
+                                        <td class="col-3 text-wrap"> June 08 - June 14</td>
+                                        <td class="col-2 flex-10 priority"><i class="fa fa-flag text-center pr-1 text-red"></i> P1 </td>
+                                        <td class="col-2 flex-12 text-center bg-gray mr-auto report-progress" data-progress="0">Not started</td>
+                                    </tr>
+                                    <tr class="row">
+                                        <td class="col-6 ml-auto">Implement the Design to Front-end</td>
+                                        <td class="col-3 text-wrap"> June 08 - June 14</td>
+                                        <td class="col-2 flex-10 priority"><i class="fa fa-flag text-center pr-1 text-red"></i> P1 </td>
+                                        <td class="col-2 flex-12 text-center bg-yellow mr-auto report-progress" data-progress="10">10%</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+                            <div class="card-columns card-report mt-3  d-none" data-id="1">
+                                <div class="card shadow border-0">
+                                    <div class="card-body d-flex flex-column">
+                                        <div class="priority mb-2"><i class="fa fa-flag text-center pr-1 text-orange"></i> P2 </div>
+                                        <h5 class="card-title">Design our blog based on the design implication
+                                        </h5>
+                                        <small class="project-name text-purple">Planning and Reporting</small>
+                                        <p class="card-text card-date mt-2">June 01 - June 07</p>
+                                        <div class="report-progress text-white text-center bg-green text-wrap py-1 px-3 align-self-start" data-progress="100">DONE</div>
+                                    </div>
+                                </div>
+                                <div class="card shadow border-0">
+                                    <div class="card-body d-flex flex-column">
+                                        <div class="priority mb-2"><i class="fa fa-flag text-center pr-1 text-red"></i> P1 </div>
+                                        <h5 class="card-title">Ask all members feedback (until Tuesday, June 09)
+                                        </h5>
+                                        <small class="project-name text-purple">Planning and Reporting</small>
+                                        <p class="card-text card-date mt-2">June 08 - June 14</p>
+                                        <div class="report-progress text-center bg-yellow text-wrap py-1 px-3 align-self-start" data-progress="50">50%</div>
+                                    </div>
+                                </div>
+                                <div class="card shadow border-0">
+                                    <div class="card-body d-flex flex-column">
+                                        <div class="priority mb-2"><i class="fa fa-flag text-center pr-1 text-red"></i> P1 </div>
+                                        <h5 class="card-title">Discuss with <a href="">@Wang Chen</a> about the implementation
+                                        </h5>
+                                        <small class="project-name text-purple">Planning and Reporting</small>
+                                        <p class="card-text card-date mt-2">June 08 - June 14</p>
+                                        <div class="report-progress text-center bg-gray text-wrap py-1 px-3 align-self-start" data-progress="0">Not started</div>
+                                    </div>
+                                </div>
+                                <div class="card shadow border-0">
+                                    <div class="card-body d-flex flex-column">
+                                        <div class="priority mb-2"><i class="fa fa-flag text-center pr-1 text-red"></i> P1 </div>
+                                        <h5 class="card-title">Implement the Design to Front-end
+                                        </h5>
+                                        <small class="project-name text-purple">Planning and Reporting</small>
+                                        <p class="card-text card-date mt-2">June 08 - June 14</p>
+                                        <div class="report-progress text-center bg-yellow text-wrap py-1 px-3 align-self-start" data-progress="10">10%</div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="d-none flex-column my-2">
                                 <div class="no-gutters row border">
                                     <span class="col-6 pl-3 py-2 text-wrap mr-auto">Design our blog based on the design implicationDesign our blog based on the design implicationDesign our blog based on the design implicationDesign our blog based on the design implicationDesign our blog based on the design implicationDesign our blog based on the design implication</span>
                                     <span class="col-3 px-1 text-wrap text-center border-left border-right py-2">June 01 - June 07</span>
