Left Navigation to report

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="collapse show" id="sub-project-list">
                         <div class="nav flex-column nav-pills">
-                            <a class="nav-link" href="#">Planning and Reporting</a>
+                            <a class="nav-link" href="./report.html">Planning and Reporting</a>
                             <a class="nav-link" href="#">Fitness Tracker</a>
                             <a class="nav-link" href="#">1D Pointing App</a>
                         </div>
